# Follow-Person-Goal-Publisher-ROS2

./: .gitmodules  192.168.119-metadata.json  DokumentierungAufnahme  HOW_TO_RUN.txt  README.md  TODO.txt  frames_2024-10-21_17.13.51.gv  frames_2024-10-22_18.45.05.gv  object_detection_node.py  rbt-10b.lri.hochschule-trier-metadata.json  run.sh
config/: nav2_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ouster_ros/share/: LICENSE  LICENSE-bin
launch/: run.sh
log/: latest_build
rosbag/rosbag2_2024_10_23-18_09_51/: metadata.yaml  rosbag2_2024_10_23-18_09_51_0.db3
src/: HowTo.txt  Theorie.txt
src/assets/: Person.py  PersonPool.py
src/main/: package.xml  setup.py
src/main/config/: driver_params.yaml
src/main/launch/: main_launch.py
src/main/main/: goal_publisher_node.py  object_detection_node.py  sensor_presentation_node.py
src/navigation/: setup.py
src/navigation/config/: slam_params.yaml
src/navigation/launch/: SimulationLaunch.py  nav2_launch.py  navigation_launch.py  simulation_launch.py
src/object_tracking_messages/: CMakeLists.txt  package.xml
src/object_tracking_messages/msg/: DetectedPerson.msg  DetectedPersons.msg  FollowPersonState.msg  PersonDistance.msg  PersonKeyPoint.msg
src/odometry_publisher/: CMakeLists.txt
src/odometry_publisher/src/: odom_publisher_node.cpp
src/ouster_voxel_filter/: setup.cfg  setup.py
src/position_estimation/: setup.cfg  setup.py
src/sensor_presentation/: setup.cfg  setup.py
src/yolo_tracking/: package.xml  setup.cfg  setup.py
(+859 files in other folders)
